# chat

ChatServer/include/: CSession.h  ChatServer.h  MsgNode.h  StatusGrpcClient.h  TcpLogicSystem.h  const.h  message.proto
ChatServer/src/: CMakeLists.txt  CSession.cpp  ChatServer.cpp  ConfigMgr.cpp  MysqlPool.cpp  StatusGrpcClient.cpp  main.cpp  message.grpc.pb.cc  redisMgr.cpp
ChatServer2/: config.ini
ChatServer2/include/: AsioIOServicePool.h  CSession.h  ChatServiceImpl.h  MsgNode.h  MysqlMgr.h  MysqlPool.h  TcpLogicSystem.h  UserMgr.h  const.h  message.grpc.pb.h  redisMgr.h  userdata.h
ChatServer2/src/: CSession.cpp  ChatServer.cpp  ChatServiceImpl.cpp  MysqlMgr.cpp  MysqlPool.cpp  StatusGrpcClient.cpp  TcpLogicSystem.cpp  UserMgr.cpp  main.cpp  message.pb.cc
GetServer/: config.ini
GetServer/StatusServer/: CMakeLists.txt  ChatGrpcClient.cpp  ChatGrpcClient.h  StatusServer.cpp  StatusServiceImpl.h
GetServer/include/: CServer.h  ConfigMgr.h  HttpConnection.h  LogicSystem.h  MysqlMgr.h  MysqlPool.h  Singleton.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h  message.grpc.pb.h  message.proto  redisMgr.h  utils.h
GetServer/src/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  ConfigMgr.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlMgr.cpp  MysqlPool.cpp  StatusGrpcClient.cpp  main.cpp  message.grpc.pb.cc  redisMgr.cpp
GetServer/test/: CMakeLists.txt  client.cpp  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  helloworld.proto  server.cpp
VerifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
